k8s/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: minio-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 9090
      # name: minio-service
      targetPort: 9090
      protocol: TCP
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app.kubernetes.io/name: minio
